--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "lucide-react": "^0.453.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-fast-marquee": "^1.6.5",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.28.0",
         "react-slick": "^0.30.2",
